--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pytz==2025.2
 referencing==0.37.0
 requests==2.32.5
 rpds-py==0.28.0
+seaborn=0.13.2
 six==1.17.0
 smmap==5.0.2
 streamlit==1.51.0
@@ -42,3 +43,4 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 watchdog==6.0.0
+
