--- a/11.11 good/requirements.txt
+++ b/11.11 good/requirements.txt
@@ -1,46 +1,55 @@
+
 altair==5.5.0
-attrs==25.4.0
+attrs==25.3.0
 blinker==1.9.0
-cachetools==6.2.1
-certifi==2025.10.5
-charset-normalizer==3.4.4
-click==8.3.0
+cachetools==5.5.2
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
 colorama==0.4.6
-contourpy==1.3.3
+contourpy==1.3.2
 cycler==0.12.1
-fonttools==4.60.1
+fonttools==4.58.4
 gitdb==4.0.12
-GitPython==3.1.45
-idna==3.11
+GitPython==3.1.44
+idna==3.10
 Jinja2==3.1.6
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-kiwisolver==1.4.9
-MarkupSafe==3.0.3
-matplotlib==3.10.7
-narwhals==2.11.0
-numpy==2.3.4
-packaging==25.0
-pandas==2.3.3
-pillow==12.0.0
-protobuf==6.33.0
-pyarrow==21.0.0
+joblib==1.5.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+narwhals==1.42.1
+numpy==2.3.0
+packaging==24.2
+pandas==2.3.0
+patsy==1.0.1
+pillow==11.2.1
+plotly==6.1.2
+protobuf==6.31.1
+pyarrow==20.0.0
 pydeck==0.9.1
-pyparsing==3.2.5
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
-referencing==0.37.0
-requests==2.32.5
-rpds-py==0.28.0
+referencing==0.36.2
+requests==2.32.4
+rpds-py==0.25.1
+scikit-learn==1.7.0
+scipy==1.15.3
 seaborn==0.13.2
 six==1.17.0
 smmap==5.0.2
-streamlit==1.51.0
+statsmodels==0.14.4
+streamlit==1.45.1
 tenacity==9.1.2
+threadpoolctl==3.6.0
 toml==0.10.2
-tornado==6.5.2
-typing_extensions==4.15.0
+tornado==6.5.1
+typing_extensions==4.14.0
 tzdata==2025.2
-urllib3==2.5.0
+urllib3==2.4.0
 watchdog==6.0.0
 
+    
